<resources>
    <string name="app_name">UG</string>
    <string name="school_name">University of Ghana</string>
    <string name="legon">Legon</string>
    <string name="image">Image</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="login_intro">Please log in with your email/phone and password.</string>
    <string name="sign_up_info">Please fill in all the fields below to sign up.</string>
    <string name="name_hint">Full name (First name &amp; last name)</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="option_intro">Select Service</string>
    <string name="tap">Tap a choice to continue</string>
    <string name="apply_for_resit">Examination Resit</string>
    <string name="request_for_transcript">Transcript Request</string>
    <string name="tap_next">Tap here to continue</string>
    <string name="setting_up">Setting up. Please wait…</string>
    <string name="form_info">Please complete the form below</string>
    <string name="fields_required">All fields are required</string>
    <string name="type_of_programme">Type of Programme</string>
    <string name="number_of_credit_hours">Number of Credit hours</string>
    <string name="student_number">Student Number</string>
    <string name="post_by_mail">Post by mail</string>
    <string name="pick_up">Pick up</string>
    <string name="full_postal_address">Full Postal Address</string>
    <string name="select_a_payment_choice">Select a Payment Choice</string>
    <string name="momo_warn">If you choose to use Mobile Money method, you will be asked to confirm with your PIN on the phone with the number you specify.</string>
    <string name="momo_number_hint">10-digit mobile money number</string>
    <string name="payment_method">Payment Method</string>
    <string name="review_details">Review Details</string>
    <string name="verify">Please verify if the details you provided are correct. If not, please go back to previous screens and make the corrections</string>
    <string name="payment">Payment</string>
    <string name="total_amount">Total Amount</string>
    <string name="service_charge">Service Charge</string>
    <string name="grand_total">Grand Total</string>
    <string name="sample_student_id">UG718A9807Y</string>
    <string name="sample_amount">GHS 0.00</string>
    <string name="sample_small_amount">GHS 0.00</string>
    <string name="confirm_charge_info">You will be charged after you continue from here.</string>
    <string name="action">Action</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="_09_17">09/17</string>
    <string name="retry">Retry</string>
    <string name="connection_failed">Connection failed. Please retry</string>
    <string name="level">Student Category</string>
    <string name="faculty">Faculty</string>
    <string name="finish">Finish</string>
    <string name="finish_info">You will be charged from your account after this step. Please confirm payment with PIN if you chose to use any Mobile Money platform. \n</string>
    <string name="follow_up_mobile_number">10-digit follow-up mobile number</string>
    <string name="send">Send</string>
    <string name="sending_please_wait">Sending. Please wait…</string>
    <string name="continent_province">Continent/Province</string>
    <string name="location">Location</string>
    <string name="delivery_choice">Delivery Choice</string>
    <string name="university_of_ghana">University of Ghana</string>
    <string name="mobile_number">Mobile Number</string>
</resources>
