<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_16">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_all"
        android:paddingBottom="@dimen/margin_16"
        android:contentDescription="@string/image"/>

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_info" />

    <EditText
        android:id="@+id/follow_up_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/follow_up_mobile_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/send"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/send" />

</LinearLayout>