<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.integratorsb2b.ug.login.LoginPresenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/crest" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/school_name"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legon"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_intro"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="@dimen/margin_8"
                android:hint="@string/email_or_phone"
                android:text="@={presenter.username}"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:text="@={presenter.password}"
                android:layout_margin="@dimen/margin_8"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="24dp"
                    android:onClick="@{()->presenter.forgotPassword()}"
                    android:text="@string/forgot_password"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:text="@string/login"
                    android:onClick="@{() -> presenter.login()}"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@color/colorPrimary">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:onClick="@{()->presenter.createAccount()}"/>
        </FrameLayout>
    </RelativeLayout>

</layout>