<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:contentDescription="@string/image"
        android:src="@drawable/crest"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/university_of_ghana"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_margin="@dimen/margin_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/legon"
        android:textSize="20sp"/>

</LinearLayout>