<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Label"
        android:text="@string/level"
        android:paddingBottom="@dimen/margin_8"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/level"
        android:paddingBottom="@dimen/margin_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Label"
        android:text="@string/faculty"
        android:paddingBottom="@dimen/margin_8"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/faculty"
        android:paddingBottom="@dimen/margin_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Label"
        android:text="@string/number_of_credit_hours"
        android:paddingBottom="@dimen/margin_8"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/credit_hours"
        android:paddingBottom="@dimen/margin_16"/>
</LinearLayout>