<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="presenter"
            type="com.integratorsb2b.ug.home.HomePresenter"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <TextView
                style="@style/AppTheme.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_intro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                android:text="@string/tap"
                android:paddingBottom="@dimen/margin_16"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{presenter.onCheckChangedListener}">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resit"
                    android:onCheckedChanged="@{() -> presenter.itemChecked()}"
                    android:text="@string/apply_for_resit"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:id="@+id/transcript"
                    android:onCheckedChanged="@{() -> presenter.itemChecked()}"
                    android:layout_height="wrap_content"
                    android:text="@string/request_for_transcript" />
            </RadioGroup>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_next"
            android:id="@+id/next"
            android:onClick="@{()->presenter.next()}"
            android:layout_margin="@dimen/margin_16"/>
    </android.support.design.widget.CoordinatorLayout>

</layout>
