<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.integratorsb2b.ug.resit.ResitPresenter" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_16">

                    <TextView
                        style="@style/AppTheme.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/margin_8"
                        android:text="@string/form_info" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/margin_16"
                        android:text="@string/fields_required" />

                    <TextView
                        style="@style/AppTheme.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_student"
                        android:drawablePadding="@dimen/margin_16"
                        android:paddingBottom="@dimen/margin_8"
                        android:text="@string/level" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/levels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16" />

                    <TextView
                        style="@style/AppTheme.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_programme"
                        android:drawablePadding="@dimen/margin_16"
                        android:paddingBottom="@dimen/margin_8"
                        android:text="@string/type_of_programme" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/programmes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:text="@{presenter.unitCost}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/AppTheme.Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_time"
                            android:drawablePadding="@dimen/margin_16"
                            android:paddingRight="@dimen/margin_16"
                            android:text="@string/number_of_credit_hours" />

                        <EditText
                            android:layout_width="56dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={presenter.creditHours}" />
                    </LinearLayout>

                    <TextView
                        style="@style/AppTheme.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_id"
                        android:drawablePadding="@dimen/margin_16"
                        android:text="@string/student_number" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:inputType="text"
                        android:text="@={presenter.studentNumber}" />

                    <TextView
                        style="@style/AppTheme.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="@dimen/margin_16"
                        android:text="@string/mobile_number" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:text="@={presenter.mobileNumber}" />

                </LinearLayout>
            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/margin_16"
                android:onClick="@{()->presenter.next()}"
                android:src="@drawable/ic_next" />
        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/waiting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_wait" />

            <TextView
                android:id="@+id/info"
                style="@style/AppTheme.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_16"
                android:text="@string/setting_up" />

            <ProgressBar
                android:id="@+id/progress"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:indeterminate="true" />

            <Button
                android:id="@+id/retry"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_16"
                android:onClick="@{() -> presenter.fetchConfigs()}"
                android:text="@string/retry"
                android:visibility="gone" />

        </LinearLayout>
    </FrameLayout>
</layout>